<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lama_izin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/value_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lama_izin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/duration" />

    <TextView
        android:id="@+id/toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terhitung_mulai"
        app:layout_constraintStart_toStartOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/value_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terhitung_mulai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/toDate" />

    <TextView
        android:id="@+id/backDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tanggal_kembali"
        app:layout_constraintStart_toStartOf="@id/toDate"
        app:layout_constraintTop_toBottomOf="@id/toDate" />

    <TextView
        android:id="@+id/value_backDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_kembali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/backDate" />

    <TextView
        android:id="@+id/inDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tanggal_masuk_bekerja"
        app:layout_constraintStart_toStartOf="@id/backDate"
        app:layout_constraintTop_toBottomOf="@id/backDate" />

    <TextView
        android:id="@+id/value_inDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal_masuk_bekerja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/inDate" />


</androidx.constraintlayout.widget.ConstraintLayout>