<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="permitArg"
            type="com.pertamina.absensiapplication.model.Permit" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#F1EFF1"
        tools:context=".view.NegotiatePermitFragment">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/detail_permit_cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/durasi_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="#c1c2c4">

                        <EditText
                            android:text="@{permitArg.leaveDuration+``}"
                            android:id="@+id/durasi_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/lama_cuti_hari"
                            android:inputType="numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_to_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:textColorHint="#c1c2c4">

                        <EditText
                            android:text="@{permitArg.dateTo}"
                            android:id="@+id/date_to_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_date"
                            android:drawablePadding="8dp"
                            android:focusable="false"
                            android:hint="@string/tanggal_berangkat"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_back_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColorHint="#c1c2c4">

                        <EditText
                            android:text="@{permitArg.dateBack}"
                            android:id="@+id/date_back_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_date"
                            android:drawablePadding="8dp"
                            android:focusable="false"
                            android:hint="@string/tanggal_kembali"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/date_in_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        android:textColorHint="#c1c2c4">

                        <EditText
                            android:text="@{permitArg.dateIn}"
                            android:id="@+id/date_in_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_action_date"
                            android:drawablePadding="8dp"
                            android:focusable="false"
                            android:hint="@string/tanggal_masuk"
                            android:inputType="date" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#619F1A"
            android:text="@string/negosiasi" />
    </LinearLayout>
</layout>
